--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -405,7 +405,7 @@ type ColorValue = Color[ColorKey]; // Type "#B33930" | "#113A5C" | "#9C0E7D"
 ### Null & Undefined
 
 In TypeScript types `null` and `undefined` many times can be used interchangeably.  
-For consistency strive to:
+Strive to:
 
 - Use `null` to explicitly state it has no value - assignment, return function type etc.
 - Use `undefined` assignment when the value doesn't exist. E.g. exclude fields in form, request payload, database query ([Prisma differentiation](https://www.prisma.io/docs/concepts/components/prisma-client/null-and-undefined))...
