--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -681,7 +681,7 @@ In case using frontend framework with file-system based router (e.g. Nextjs), `p
 
 ## Appendix - React
 
-Since React components and hooks are also functions, [respective function conventions](#functions) applies.
+Since React components and hooks are also functions, respective [function conventions](#functions) applies.
 
 ### Props Type
 
