--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -163,7 +163,7 @@ If TypeScript error can't be mitigated, as last resort use `@ts-expect-error` to
 const result = doSomething('hello');
 
 // ✅ Use @ts-expect-error with description
-// @ts-expect-error: the library definition is wrong
+// @ts-expect-error: The library definition is wrong, doSomething accepts string as an argument.
 const result = doSomething('hello');
 ```
 
