--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -110,6 +110,38 @@ Consider benefits when explicitly typing the return value of a function:
 - Similar to writing tests before implementation (TDD), defining function arguments and return type, gives you the opportunity to discuss the feature functionality and its interface ahead of implementation.
 - Although type inference is very convenient, adding return types can save TypeScript compiler a lot of work.
 
+### Template Literal Types
+
+Embrace using template literal types, instead of just (wide) `string` type.  
+Template literal types have many use cases e.g. API endpoints, routing, internationalization, database queries, CSS typings ...
+
+```ts
+// ❌ Avoid
+const userEndpoint = '/api/usersss'; // Type 'string' - no error
+
+// ✅ Use
+type ApiRoute = 'users' | 'posts' | 'comments';
+type ApiEndpoint = `/api/${ApiRoute}`;
+const userEndpoint: ApiEndpoint = '/api/users';
+
+// ❌ Avoid
+const homeTitleTranslation = 'transltion.hom.title'; // Type 'string' - no error
+
+// ✅ Use
+type LocaleKeyPages = 'home' | 'about' | 'contact';
+type TranslationKey = `translation.${LocaleKeyPages}.${string}`;
+const homeTitleTranslation: TranslationKey = 'translation.home.title';
+
+// ❌ Avoid
+const color = 'blue-450'; // Type 'string' - no error
+
+// ✅ Use
+type BaseColor = 'blue' | 'red' | 'yellow' | 'gray';
+type Variant = 50 | 100 | 200 | 300 | 400;
+// Type blue-50, blue-100, blue-200, blue-300, blue-400, red-50, red-100, #AD3128 ...
+type Color = `${BaseColor}-${Variant}` | `#${string}`;
+```
+
 ### Type any & unknown
 
 `any` data type must not be used as it represents literally “any” value that TypeScript defaults to and skips type checking since it cannot infer the type. As such, `any` is dangerous, it can mask severe programming errors.
