--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -29,7 +29,7 @@ Since "consistency is the key", style guide strives to enforce majority of the r
 Still certain design and architectural decisions must be followed which are described with conventions bellow.
 
 **Disclaimer**  
-You don't have to follow every convention exactly as it is written in guide, decide what works best for your product and team and stay consistent with your codebase.
+You don't have to follow every convention exactly as it is written in guide, decide what works best for your product and team to stay consistent with your codebase.
 
 **Requirements**  
 Style Guide requires you to use:
