--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -35,8 +35,7 @@ You don't have to follow every convention exactly as it is written in guide, dec
 Style Guide requires you to use:
 
 - [TypeScript v5](https://github.com/microsoft/TypeScript)
-- [typescript-eslint v6](https://github.com/typescript-eslint/typescript-eslint) with [`strict-type-checked`](https://typescript-eslint.io/linting/configs/#strict-type-checked),
-  [`stylistic-type-checked`](https://typescript-eslint.io/linting/configs/#stylistic-type-checked) configurations enabled.
+- [typescript-eslint v6](https://github.com/typescript-eslint/typescript-eslint) with [`strict-type-checked`](https://typescript-eslint.io/linting/configs/#strict-type-checked) configuration enabled.
 
 Style Guide assumes using, but is not limited to:
 
