--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -123,7 +123,7 @@ type ApiEndpoint = `/api/${ApiRoute}`;
 const userEndpoint: ApiEndpoint = '/api/users';
 
 // ❌ Avoid
-const homeTitleTranslation = 'transltion.hom.title'; // Type 'string' - no error
+const homeTitleTranslation = 'transltion.home.title'; // Type 'string' - no error
 // ✅ Use
 type LocaleKeyPages = 'home' | 'about' | 'contact';
 type TranslationKey = `translation.${LocaleKeyPages}.${string}`;
