--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -15,23 +15,32 @@ import { UseDocumentTitle } from '@site/src/hooks';
 
 TypeScript Style Guide provides a concise set of conventions and best practices used to create consistent, maintainable code.
 
-As projects grow in size and complexity, maintaining code quality and ensuring consistent practices becomes increasingly challenging. Defining and following a standard way to write TypeScript applications brings consistent codebase and faster development cycles.
-
 ## Table of Contents
 
 <TableOfContents items={toc} />
 
 ## About Guide
 
-As any code style guide is opinionated, this is no different as it tries to set conventions (sometimes arbitrary) that govern our code.
+### What
 
-Since "consistency is the key", style guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc.  
+As any code style guide is opinionated, TypeScript Style Guide is no different as it tries to set conventions (sometimes arbitrary) that govern our code.
+
+Since "consistency is the key", guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc.  
 Still certain design and architectural decisions must be followed which are described with conventions bellow.
 
-**Disclaimer**  
+### Why
+
+- As project grow in size and complexity, maintaining code quality and ensuring consistent practices becomes increasingly challenging.
+- Defining and following a standard way to write TypeScript applications brings consistent codebase and faster development cycles.
+- No need to discuss code styles in code reviews.
+- Saves development team time and energy.
+
+### Disclaimer
+
 You don't have to follow every convention exactly as it is written in guide, decide what works best for your product and team to stay consistent with your codebase.
 
-**Requirements**  
+### Requirements
+
 Style Guide requires you to use:
 
 - [TypeScript v5](https://github.com/microsoft/TypeScript)
