--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -33,7 +33,7 @@ Still certain design and architectural decisions must be followed which are desc
 - As project grow in size and complexity, maintaining code quality and ensuring consistent practices becomes increasingly challenging.
 - Defining and following a standard way to write TypeScript applications brings consistent codebase and faster development cycles.
 - No need to discuss code styles in code reviews.
-- Saves development team time and energy.
+- Saves team time and energy.
 
 ### Disclaimer
 
