--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -49,7 +49,7 @@ Style Guide requires you to use:
 Style Guide assumes using, but is not limited to:
 
 - [React](https://github.com/facebook/react) as UI library for frontend conventions.
-- [Jest](https://jestjs.io/) and [Testing Library](https://testing-library.com/) for testing conventions.
+- [Testing Library](https://testing-library.com/) for testing conventions.
 
 ## TLDR
 
