--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -23,7 +23,7 @@ TypeScript Style Guide provides a concise set of conventions and best practices 
 
 ### What
 
-Since "consistency is the key", guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc.  
+Since "consistency is the key", TypeScript Style Guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc.  
 Still certain design and architectural decisions must be followed which are described with conventions bellow.
 
 ### Why
@@ -35,7 +35,7 @@ Still certain design and architectural decisions must be followed which are desc
 
 ### Disclaimer
 
-As any code style guide is opinionated, TypeScript Style Guide is no different as it tries to set conventions (sometimes arbitrary) that govern our code.
+As any code style guide is opinionated, this is no different as it tries to set conventions (sometimes arbitrary) that govern our code.
 
 You don't have to follow every convention exactly as it is written in guide, decide what works best for your product and team to stay consistent with your codebase.
 
