--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -921,8 +921,6 @@ Automated test comes with benefits that helps us write better code and makes it 
   E.g. given some user input, they receive the expected output for a process.
 - Make tests as isolated as possible, where they don't depend on order of execution and should run independently with its own local storage, session storage, data, cookies etc.
   Test isolation improves reproducibility, makes debugging easier and prevents cascading test failures.
-- Avoid testing third-party dependencies. Only test what you control. Don't try to test links to external sites or third party servers that you do not control.
-
 - Tests should be resilient to changes.
   - Query HTML elements based on attributes that are unlikely to change. Order of priority must be followed as specified in [Testing Library](https://testing-library.com/docs/queries/about/#priority) - [role](https://testing-library.com/docs/queries/byrole), [label](https://testing-library.com/docs/queries/bylabeltext), [placeholder](https://testing-library.com/docs/queries/byplaceholdertext), [text contents](https://testing-library.com/docs/queries/bytext), [display value](https://testing-library.com/docs/queries/bydisplayvalue), [alt text](https://testing-library.com/docs/queries/byalttext), [title](https://testing-library.com/docs/queries/bytitle), [test ID](https://testing-library.com/docs/queries/bytestid).
   - If testing with a database then make sure you control the data. If test are run against a staging environment make sure it doesn't change.
@@ -932,6 +930,7 @@ Automated test comes with benefits that helps us write better code and makes it 
 - Don't test implementation details. When refactoring code, tests shouldn't change.
 - Don't re-test the library/framework.
 - Don't mandate 100% code coverage for applications.
+- Don't test third-party dependencies. Only test what you control. Don't try to test links to external sites or third party servers that you do not control.
 - Don't test just to test.
 
   ```ts
