--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -930,7 +930,7 @@ Automated test comes with benefits that helps us write better code and makes it 
 - Don't test implementation details. When refactoring code, tests shouldn't change.
 - Don't re-test the library/framework.
 - Don't mandate 100% code coverage for applications.
-- Don't test third-party dependencies. Only test what you control. Don't try to test links to external sites or third party servers that you do not control.
+- Don't test third-party dependencies. Only test what your team controls (package, API, microservice etc.). Don't test external sites links, third party servers, packages etc.
 - Don't test just to test.
 
   ```ts
