--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -489,7 +489,7 @@ While it's often hard to find the best name, try optimize code for consistency a
   `PRODUCT_ID`
 - **Object constants**
 
-  Singular, capitalized with const assertion and optionally satisfies type (if there is one).
+  Singular, capitalized with const assertion (optionally satisfies type if there is one).
 
   ```ts
   const ORDER_STATUS = {
