--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -56,7 +56,7 @@ Style Guide assumes using, but is not limited to:
 - Strive for data immutability. [&#11107;](#data-immutability)
 - Embrace const assertions. [&#11107;](#const-assertion)
 - Avoid type assertions. [&#11107;](#type--non-nullability-assertions)
-- Embrace discriminated union. [&#11107;](#discriminated-union)
+- Embrace discriminated unions. [&#11107;](#discriminated-union)
 - Strive for functions to be pure, stateless and have single responsibility. [&#11107;](#functions)
 - Majority of function arguments should be required (use optional sparingly). [&#11107;](#required--optional-args)
 - Strong emphasis to keep naming conventions consistent and readable. [&#11107;](#naming-conventions)
