--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -154,6 +154,7 @@ Discriminated unions are a powerful concept you may encounter in various program
 
 Embrace using discriminated unions, since code becomes easier to read and understand by explicitly indicating the possible cases for a given type.
 
+- As mentioned in [Args as Discriminated Union](#args-as-discriminated-union), discriminated union eliminates optional args which decreases complexity on function API.
 - Exhaustiveness check - TypeScript can ensure that all possible variants of a type are implemented, eliminating the risk of undefined or unexpected behavior at runtime. ([eslint rule](https://typescript-eslint.io/rules/switch-exhaustiveness-check/))
 
   ```ts
