--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -659,15 +659,15 @@ const m = s * 60;
 // avg users per minute
 const myAvg = u / m;
 
-// ✅ Use
+// ✅ Use - Expressive code and name things what they are
 const SECONDS_IN_MINUTE = 60;
 const minutes = seconds * SECONDS_IN_MINUTE;
 const averageUsersPerMinute = noOfUsers / minutes;
 
+// ✅ Use - Add context to explain why in comments
 // TODO: Filtering should be moved to the backend once API changes are released.
 // Issue/PR - https://github.com/foo/repo/pulls/55124
 const filteredUsers = frontendFiltering(selectedUsers);
-
 // Use Fourier transformation to minimize information loss - https://github.com/dntj/jsfft#usage
 const frequencies = signal.FFT();
 ```
