--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -537,7 +537,7 @@ Camel case
 
 #### Generics
 
-A name starts with the capital letter T `TRequest`, `TFooBar` (similar to [.Net internal](https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.dictionary-2?view=net-5.0) implementation).  
+A name must start with the capital letter T `TRequest`, `TFooBar`.  
  Avoid (popular convention) naming generics with one character `T`, `K` etc., the more variables we introduce, the easier it is to mistake them.
 
 ```ts
