--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -537,8 +537,8 @@ Camel case
 
 #### Generics
 
-A name must start with the capital letter T `TRequest`, `TFooBar`.  
- Avoid (popular convention) naming generics with one character `T`, `K` etc., the more variables we introduce, the easier it is to mistake them.
+A generic variable must start with the capital letter T followed by descriptive name `TRequest`, `TFooBar`.  
+Naming generics using popular convention with one character `T`, `K` etc. is not allowed, the more variables we introduce, the easier it is to mistake them.
 
 ```ts
 // ❌ Avoid naming generics with one character
