--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -539,7 +539,7 @@ Camel case
 
 A generic variable must start with the capital letter T followed by a descriptive name `TRequest`, `TFooBar`.
 
-Creating more complex types often include generics, which can make them hard to read and understand, that's why we try to put best effort naming them.  
+Creating more complex types often include generics, which can make them hard to read and understand, that's why we try to put best effort when naming them.  
 Naming generics using popular convention with one character `T`, `K` etc. is not allowed, the more variables we introduce, the easier it is to mistake them.
 
 ```ts
