--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -563,7 +563,7 @@ const pair = createPair(1, 'a');
 '@typescript-eslint/naming-convention': [
   'error',
   {
-    // Generic type parameter must start with letter T, followed by word starting with any uppercase letter.
+    // Generic type parameter must start with letter T, followed by any uppercase letter.
     selector: 'typeParameter',
     format: ['PascalCase'],
     custom: { regex: '^T[A-Z]', match: true },
