--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -960,6 +960,8 @@ Automated test comes with benefits that helps us write better code and makes it 
 ✅ Do:
 
 - Implement test to be short, explicit, and pleasant to work with. Intent of a test should be immediately visible.
+- As mentioned in [function conventions](#functions) try to keep them pure, and impure one small and focused.  
+  It will make them easy to test, by passing args and observing return values, since we will **rarely need to mock dependencies**.
 - Strive to write tests in a way your app/package is used by a user, meaning test business logic.  
   E.g. given some user input, they receive the expected output for a process.
 - Make tests as isolated as possible, where they don't depend on order of execution and should run independently with its own local storage, session storage, data, cookies etc.
