--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -73,7 +73,7 @@ As an exception mutations should be used sparingly in cases where truly necessar
 ## Types
 
 When creating types we try to think of how they would best **describe our code**.  
-Being expressive and keeping them as **narrow as possible** brings benefits to the codebase:
+Being expressive and keeping types as **narrow as possible** brings benefits to the codebase:
 
 - Increased Type Safety - Catch errors at compile-time, since narrowed types provide more specific information about the shape and behavior of your data.
 - Improved Code Clarity - Reduced cognitive load by providing clearer boundaries and constraints on your data which makes your code easier to understand by other developers.
